--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="output">
         <p>Click the button to run the PC</p>
     </div>
-    <button id="functions.js">Run Serverless Function</button>
+    <button id="runFunctionBtn">Run Serverless Function</button>
 
     <script src="functions.js"></script>
 </body>
