--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Sensation';
+            font-family: 'Sansation';
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
