--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p>Click the button to run the PC</p>
     </div>
     <button id="runFunctionBtn">Run Serverless Function</button>
-
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script src="functions.js"></script>
 </body>
 </html>
